--- a/openacademy/views/openacademy.xml
+++ b/openacademy/views/openacademy.xml
@@ -18,6 +18,14 @@
                             <page string="About">
                                 This is an example of notebooks
                             </page>
+                            <page string="Sessions">
+                                <field name="session_ids">
+                                    <tree string="Registered sessions">
+                                        <field name="name"/>
+                                        <field name="instructor_id"/>
+                                    </tree>
+                                </field>
+                            </page>
                         </notebook>
                     </sheet>
                 </form>
@@ -98,6 +106,8 @@
                                 <field name="seats"/>
                             </group>
                         </group>
+                        <label for="attendee_ids"/>
+                        <field name="attendee_ids"/>
                     </sheet>
                 </form>
             </field>
