--- a/openacademy/views/openacademy.xml
+++ b/openacademy/views/openacademy.xml
@@ -176,7 +176,7 @@
             <field name="name">Sessions</field>
             <field name="res_model">openacademy.session</field>
             <field name="view_type">form</field>
-            <field name="view_mode">tree,form,calendar,gantt,graph</field>
+            <field name="view_mode">tree,form,calendar,gantt,graph,kanban</field>
         </record>
 
         <menuitem id="session_menu" name="Sessions"
