--- a/openacademy/views/openacademy.xml
+++ b/openacademy/views/openacademy.xml
@@ -101,13 +101,13 @@
             <field name="arch" type="xml">
                 <form string="Session Form">
                     <header>
-                        <button name="action_draft" type="workflow"
+                        <button name="draft" type="workflow"
                                 string="Reset to draft"
                                 states="confirmed,done"/>
-                        <button name="action_confirm" type="workflow"
+                        <button name="confirm" type="workflow"
                                 string="Confirm" states="draft"
                                 class="oe_highlight"/>
-                        <button name="action_done" type="workflow"
+                        <button name="done" type="workflow"
                                 string="Mark as done" states="confirmed"
                                 class="oe_highlight"/>
                         <field name="state" widget="statusbar"/>
