--- a/mqo_exercises/views/exercises.xml
+++ b/mqo_exercises/views/exercises.xml
@@ -51,7 +51,7 @@
         </record>
 
         <!-- top level menu: no parent -->
-        <menuitem id="main_learn_menu" name=Learn/>
+        <menuitem id="main_learn_menu" name="Learn"/>
         <!-- A first level in the left side menu is needed
              before using action= attribute -->
         <menuitem id="learn_menu" name="Learn"
