Improvements to views/partner.xml and hopefully fixing next exercise.

--- a/mqo_exercises/views/partner.xml
+++ b/mqo_exercises/views/partner.xml
@@ -12,7 +12,15 @@
                         <group>
                             <field name="next_exercise_id"/>
                             <field name="allocation_ids"/>
+                            	<tree string="Allocations">
+                            		<field name="partner_id"/>
+									<field name="suitability"/>
+                                </tree>
                             <field name="assignment_ids"/>
+                            	<tree string="Assignments">
+                            		<field name="partner_id"/>
+									<field name="suitability"/>
+                                </tree>
                         </group>
                     </page>
                 </notebook>
