--- a/mqo_exercises/views/partner.xml
+++ b/mqo_exercises/views/partner.xml
@@ -8,21 +8,25 @@
             <field name="inherit_id" ref="base.view_partner_form"/>
             <field name="arch" type="xml">
                 <notebook position="inside">
-                    <page string="Exercises">
-                        <group>
-                            <field name="next_exercise_id"/>
-                            <field name="allocation_ids"/>
-                            	<tree string="Allocations">
-                            		<field name="exercise_id"/>
-									<field name="suitability"/>
-                                </tree>
-                            <field name="assignment_ids"/>
-                            	<tree string="Assignments">
-                            		<field name="exercise_id"/>
-									<field name="rating"/>
-                                </tree>
-                        </group>
-                    </page>
+	                <page string="Next Exercise">
+	                    <field name="next_exercise_id"/>
+	                </page>
+	                <page string="Allocations">
+	                    <field name="allocation_ids">
+	                        <tree string="Allocations">
+	                            <field name="exercise_id"/>
+	                            <field name="suitability"/>
+	                        </tree>
+	                    </field>
+	                </page>
+	                <page string="Assignments">
+	                    <field name="assignment_ids">
+	                        <tree string="Assignments">
+	                        	<field name="exercise_id"/>
+	                            <field name="rating"/>
+	                        </tree>
+	                    </field>
+	                </page>
                 </notebook>
             </field>
         </record>
