--- a/mqo_exercises/views/partner.xml
+++ b/mqo_exercises/views/partner.xml
@@ -9,9 +9,10 @@
             <field name="arch" type="xml">
                 <notebook position="inside">
 	                <page string="Next Exercise">
-	                    <field name="next_exercise_id">
-	                        <tree string="Next Exercise">
-	                            <field name="name"/>
+	                    <field name="allocation_ids">
+	                        <tree string="Next allocated exercise">
+	                            <field name="exercise_id"/>
+	                            <field name="suitability"/>
 	                        </tree>
 	                    </field>
 	                </page>
