Revert "Changed partner model and view to refer to next allocation, rather than"
This reverts commit af3093f8d1c98548529e0d76b822849ee0dcfe4d.

--- a/mqo_exercises/views/partner.xml
+++ b/mqo_exercises/views/partner.xml
@@ -9,10 +9,9 @@
             <field name="arch" type="xml">
                 <notebook position="inside">
 	                <page string="Next Exercise">
-	                    <field name="allocation_ids">
-	                        <tree string="Next allocated exercise">
-	                            <field name="exercise_id"/>
-	                            <field name="suitability"/>
+	                    <field name="next_exercise_id">
+	                        <tree string="Next Exercise">
+	                            <field name="name"/>
 	                        </tree>
 	                    </field>
 	                </page>
