--- a/mqo_exercises/views/assignments.xml
+++ b/mqo_exercises/views/assignments.xml
@@ -59,7 +59,7 @@
             </field>
         </record>
 
-        <menuitem id="assignments_menu" name="assignments" parent="learn_menu"
+        <menuitem id="assignments_menu" name="Assignments" parent="learn_menu"
                   action="assignment_list_action"/>
         <!-- Full id location:
              action="mqo_exercises.assignment_list_action"
