--- a/mqo_exercises/views/exercises.xml
+++ b/mqo_exercises/views/exercises.xml
@@ -17,6 +17,16 @@
                             <page string="About">
                                 Write instructions for this exercise.
                             </page>
+                            <page string="Parameters">
+                                <field name="sig_m"/>
+                                <field name="sig_c"/>
+                                <field name="sig_r"/>
+                                <field name="sig_e"/>
+                                <field name="exp_m"/>
+                                <field name="exp_c"/>
+                                <field name="exp_r"/>
+                                <field name="exp_e"/>
+                            </page>
                             <page string="Allocations">
                                 <field name="allocation_ids">
                                     <tree string="Allocations">
